--- a/css/selector.css
+++ b/css/selector.css
@@ -22,7 +22,7 @@
     appearance: none;
     width: 7px;
     height: 25px;
-    background: #4CAF50;
+    background: #839099;
     cursor: pointer;
 }
 
@@ -34,6 +34,6 @@
 }
 
 #selector_div {
-	width: 900px;
+	width: 960px;
 
 }
