--- a/css/selector.css
+++ b/css/selector.css
@@ -41,12 +41,18 @@
 
 
 
+#sidebar {
+	width:230px;
+	float:left;
+	padding: 15px;
+}
 
 section.range-slider {
     position: relative;
     width: 200px;
     height: 35px;
     text-align: center;
+	float: left;
 }
 
 section.range-slider input {
@@ -90,4 +96,12 @@ section.range-slider input:last-of-type::-moz-range-track {
 }
   section.range-slider input[type=range]::-moz-focus-outer {
   border: 0;
+}
+
+.sidebar_p {
+	text-align: center;
+	width: 200px;
+	left-padding: 15px;
+	right-padding: 15px;
+
 }
