--- a/css/selector.css
+++ b/css/selector.css
@@ -47,28 +47,6 @@
 	padding: 15px;
 }
 
-
-section.range-slider {
-    position: relative;
-    width: 200px;
-    height: 35px;
-    text-align: center;
-	float: left;
-}
-
-section.range-slider input {
-    pointer-events: none;
-    position: absolute;
-    overflow: hidden;
-    left: 0;
-    top: 15px;
-    width: 200px;
-    outline: none;
-    height: 18px;
-    margin: 0;
-    padding: 0;
-}
-
 section.range-slider input::-webkit-slider-thumb {
     pointer-events: all;
     position: relative;
@@ -90,15 +68,38 @@ section.range-slider input::-moz-range-track {
     background-color: rgba(0, 0, 0, 1);
     border: 0;
 }
+
+/*
+section.range-slider {
+    position: relative;
+    width: 200px;
+    height: 35px;
+    text-align: center;
+	float: left;
+}
+
+section.range-slider input {
+    pointer-events: none;
+    position: absolute;
+    overflow: hidden;
+    left: 0;
+    top: 15px;
+    width: 200px;
+    outline: none;
+    height: 18px;
+    margin: 0;
+    padding: 0;
+}
+
+
 section.range-slider input:last-of-type::-moz-range-track {
     -moz-appearance: none;
     background: none transparent;
     border: 0;
 }
- 
-section.range-slider input[type=range]::-moz-focus-outer {
+  section.range-slider input[type=range]::-moz-focus-outer {
   border: 0;
-}
+}*/
 
 .sidebar_p {
 	text-align: center;
