--- a/css/selector.css
+++ b/css/selector.css
@@ -1,7 +1,3 @@
-.slidecontainer {
-    width: 100%;
-}
-
 .slider {
     -webkit-appearance: none;
     width: 100%;
@@ -41,7 +37,8 @@
 
 #sidebar {
 	width:230px;
-	float:left;
+	/* float:left; */
+  display:inline-block;
 	padding: 15px;
 }
 
